@@ -1,0 +1,14 @@
+/* Copyright 2010, University of Colorado */
+
+package edu.colorado.phet.capacitorlab.view;
+
+import edu.colorado.phet.capacitorlab.CLConstants;
+import edu.colorado.phet.capacitorlab.CLPaints;
+
+
+public class NegativeChargeNode extends MinusNode {
+
+    public NegativeChargeNode() {
+        super( CLConstants.MINUS_CHARGE_SIZE.width, CLConstants.MINUS_CHARGE_SIZE.height, CLPaints.NEGATIVE_CHARGE );
+    }
+}
