@@ -1,3 +1,5 @@
+10/4/10 factor out nodes for positive and negative charges
+10/4/10 first pass at excess dielectric charge, not working yet
 # 0.00.22 (44657) Oct 4, 2010
 10/4/10 make spacing between e-field lines change continuously as E_effective changes
 10/4/10 only update views (charges, field) when visible
